More work on mpMap2 paper

--- a/mpMap2.bib
+++ b/mpMap2.bib
@@ -67,7 +67,6 @@ keywords = {multiparental population, Solanum lycopersicum, resequencing, QTL, S
 year = {2015}
 }
 
-
 @article{Kover2009,
     author = {Kover, Paula X. AND Valdar, William AND Trakalo, Joseph AND Scarcelli, Nora AND Ehrenreich, Ian M. AND Purugganan, Michael D. AND Durrant, Caroline AND Mott, Richard},
     journal = {PLoS Genetics},
@@ -79,6 +78,25 @@ year = {2015}
     number = {7}
 }        
 
+@article {Teuscher2007,
+  author = {Teuscher, Friedrich and Broman, Karl W.},
+  title = {Haplotype Probabilities for Multiple-Strain Recombinant Inbred Lines},
+  volume = {175},
+  number = {3},
+  pages = {1267--1274},
+  year = {2007},
+  publisher = {Genetics},
+  abstract = {Recombinant inbred lines (RIL) derived from multiple inbred strains can serve as a powerful resource for the genetic dissection of complex traits. The use of such multiple-strain RIL requires a detailed knowledge of the haplotype structure in such lines. Broman (2005) derived the two- and three-point haplotype probabilities for 2n-way RIL; the former required hefty computation to infer the symbolic results, and the latter were strictly numerical. We describe a simpler approach for the calculation of these probabilities, which allowed us to derive the symbolic form of the three-point haplotype probabilities. We also extend the two-point results for the case of additional generations of intermating, including the case of 2n-way intermated recombinant inbred populations (IRIP).},
+  journal = {Genetics}
+}
 
-
-
+@article{Sannemann2015,
+  title={Multi-parent advanced generation inter-cross in barley: high-resolution quantitative trait locus mapping for flowering time as a proof of concept},
+  author={Sannemann, Wiebke and Huang, Bevan Emma and Mathew, Boby and L{\'e}on, Jens},
+  journal={Molecular Breeding},
+  volume={35},
+  number={3},
+  pages={1--16},
+  year={2015},
+  publisher={Springer}
+}
