--- a/mpMap2.Rnw
+++ b/mpMap2.Rnw
@@ -58,10 +58,11 @@ Multiparent crosses of recombinant inbred lines are now being commonly generated
 \begin{document}
 
 \section{Introduction}
-
+<<echo=FALSE, include=FALSE>>=
+library(mpMap2)
+library(qtl)
+@
 Multiparent recombinant inbred lines are a novel class of experimental design where the genotypes of the final progeny are mosaics of the genotypes of the $2^n$ recombinant inbred founder lines. These designs have found recent application in mice \citep{Churchill2004}, Arabadopsis \citep{Kover2009}, barley \citep{Sannemann2015}, maize, rice, tomatoes \citep{Pascual2015} and wheat \citep{Huang2012, Mackay2014}. 
-
-Sentence or two about why we even have to do map construction any more, when we don't have to in animals / humans. 
 
 Existing software able to analyze multiparent designs includes \pkg{happy}, \pkg{qtl} and \pkg{mpMap} (the previous version of \pkg{mpMap2}). Packages \pkg{happy} and \pkg{qtl} are focused on qtl mapping, and do not provide the functionality necessary for map construction. Package \pkg{mpMap} provides map construction functionality for multiparent designs, but has significant limitations. Some of these limitations are computational, such as problems analysing the large data sets currently being generated. Others are statistical, such as the inability to model finite generations of selfing and residual hetrzygosity. 
 
@@ -69,20 +70,24 @@ These limitations motivated the development of \pkg{mpMap2} and \pkg{mpMapIntera
 \begin{enumerate}
 \item To write functionality in \proglang{C++} where required. 
 \item To make use of the S4 object system, to enable easier integration of \proglang{C++} code.
-\item To extend the package to biparental populations. 
+\item To extend the package to biparental and 16-parent populations. 
 \item To allow for finite generations of selfing, and therefore incorporate hetrozygous lines into the map construction process. 
 \item To allow the user to asses the computational resources required for an analysis. 
+\item To allow map construction to be performed visually and interactively. 
+\item To allow the simultaneous use of multiple experiments in the construction of a single map. 
 \end{enumerate}
 
 \section{Experimental designs}
 
 We first outline the most general experimental design that we wish to be able to analyse. We have $2^n$ inbred founder lines which are combined over the first $n$ generations, resulting in a line whoose genetic material is a mosaic of the original $2^n$ founders. An example of the first $n$ generations for $n = 2$ is given in Figure \ref{fig:intercrossing_2} and for $n = 3$ in Figure \ref{fig:intercrossing_3}. 
 
-After the first $n$ generations there is some number of generations of random intermating (possibly zero), and some number of generations of inbreeding by selfing (possibly zero). Mathematically it is possible to assume that the number of generations of inbreeding is infinite, and in this case the design is said to be a $2^n$-way RIL \citep{Teuscher2007}. Of course in practice this cannot be achieved. If the number of generations of selfing is non-zero and the number of generations of inbreeding is assumed to be infinite, the design is said to be a $2^n$-way intermated recombinant inbred population (IRIP) \citep{Teuscher2007}.
+After the first $n$ generations there is some number of generations of random intermating (possibly zero), and some number of generations of inbreeding by selfing (possibly zero). Mathematically it is possible to assume that the number of generations of inbreeding is infinite, and in this case the design is said to be a $2^n$-way RIL \citep{Teuscher2007}. In practice this cannot be achieved, but it might be assumed for the purposes of analysing the population. If the number of generations of selfing is non-zero and the number of generations of inbreeding is assumed to be infinite, the design is said to be a $2^n$-way intermated recombinant inbred population (IRIP) \citep{Teuscher2007}.
 
-One complication is that different orders of the founders in the initial cross result in genetically different individuals at the $n$th generation. These initial crosses are known as \emph{funnels}. Accounting for symmetries, there are three different funnels for the $4$ parent design, and $315$ different funnels for the 8-parent design. Two cases are mathematically tractable. In the first, only one funnel is ever used. In the second every funnel is chosen at random, which averages out the differences between the funnels.
+One complication is that different orders of the founders in the initial cross result in genetically different individuals at the $n$th generation. For example, the first three genotypes in Figure \ref{fig:funnelIllustration} are ${A, E}, {A, F}$ and ${A, G}$ and are possible at the third generation, if the initial cross ${A, B, C, D, E, F, G, H}$ shown in Figure \ref{fig:intercrossing_3} is used. The remaining three genetoypes are ${E, F}, {E, G}$ and ${E, H}$, and are impossible using this initial cross. However, if founder lines $D$ and $E$ were swapped in the initial cross, then the first three genotypes become impossible, and the last three become possible.
 
-\begin{figure}
+The initial crosses are known as \emph{funnels}. Accounting for symmetries, there are three different funnels for the $4$ parent design, $315$ different funnels for the 8-parent design and $638512875$ different funnels for the 16-parent design. Two cases are mathematically tractable. In the first, only one funnel is ever used. In the second every funnel is chosen at random, which averages out the differences between the funnels.
+
+\begin{figure}[hb]
 \centering
 \includegraphics[width=0.35\textwidth]{MAGIC4.pdf}
 \caption{Combining four founders into a single line\label{fig:intercrossing_2}}
@@ -94,15 +99,80 @@ One complication is that different orders of the founders in the initial cross r
 \caption{Combining eight founders into a single line\label{fig:intercrossing_3}}
 \end{figure}
 
+\begin{figure}
+\centering
+\includegraphics[width = 0.8\textwidth]{funnelsIllustration.pdf}
+\caption{Example genotypes for the third generation of the eight-way cross, which will be possible or impossible, depending on the choice of initial cross. \label{fig:funnelIllustration}}
+\end{figure}
+
 \section{Simulation}
 
 \subsection{Pedigrees}
 
-Package \pkg{mpMap2} provides code for the generation of a large number of pedigrees. The two biparental design functions are \code{rilPedigree(populationSize, selfingGenerations)} which generates a biparental RIL pedigree, and \code{f2Pedigree(populationSize)} which generates an F2 population. Note that the RIL pedigree requires the specification of the number of generations of selfing, and the populations generated from this pedigree is likely to contain some residual hetrozygosity. The pedigree object has a slot \code{selfing} that controls whether this hetrozygosity is modelled in the analysis. The only possible values are \code{"auto"}, in which case hetrozygosity is explicitly modelled, or \code{"infinite"} in which case the number of generations of selfing is assumed to be inifinite. 
+\subsubsection{Biparental pedigrees}
 
-The functions for simulation of four parent RIL designs are \code{fourParentPedigreeSingleFunnel} and \code{fourParentPedigreeRandomFunnels}. In the first case only one of the three funnels is used. The second four-parent design uses randomly chosen funnels for each initial cross. 
+Package \pkg{mpMap2} provides code for the generation of a large number of pedigrees. The two simplest biparental design functions are \code{rilPedigree(populationSize, selfingGenerations)} which generates a biparental RIL pedigree, and \code{f2Pedigree(populationSize)} which generates an F2 population. Note that the RIL pedigree requires the specification of the number of generations of selfing, and the populations generated from this pedigree is likely to contain some residual hetrozygosity. The pedigree object has a slot \code{selfing} that controls whether this hetrozygosity is modelled in the analysis. The only possible values are \code{"auto"}, in which case hetrozygosity is explicitly modelled, or \code{"infinite"} in which case the number of generations of selfing is assumed to be inifinite.
+
+Both the F2 and RIL are special cases of a more general biparental design, generated by 
+\begin{Code}
+twoParentPedigree(initialPopulationSize, selfingGenerations, 
+  nSeeds, intercrossingGenerations)
+\end{Code}
+Input \code{initialPopulationSize} is the number of crosses of the founders, which by assumption are all genetically identical. Input \code{intercrossingGenerations} is the number of generations of random intermating. Input \code{nSeeds} is the number of independent selfing lines generated from each individual after the random intermating. Inpu \code{selfingGenerations} is the number of generations of inbreeding by selfing. 
+
+\subsubsection{Four-parent pedigrees}
+
+The functions for simulation of four parent RIL designs are \code{fourParentPedigreeSingleFunnel} and \code{fourParentPedigreeRandomFunnels}. In the first case only the funnel ${A, B, C, D}$) is used. In the second case each individual is drawn from a randomly chosen funnel. The signatures for these functions are
+\begin{Code}
+fourParentPedigreeRandomFunnels(initialPopulationSize, selfingGenerations, 
+    nSeeds, intercrossingGenerations)
+fourParentPedigreeSingleFunnel(initialPopulationSize, selfingGenerations, 
+    nSeeds, intercrossingGenerations)
+\end{Code}
+
+The functions for generating eight and sixteen parent designs have identical signatures and similar names, except with \code{four} replaced with \code{eight} or \code{sixteen}. 
 
 \subsection{Genotypes}
+
+Once a pedigree has been created it can be used to generate genetic data. Note that for simulation of genotypes the pedigree is not restricted to those listed above, and arbitrary pedigrees are allowed. The signature of the simulation function is
+\begin{Code}
+simulateMPCross(map, pedigree, mapFunction, seed)
+\end{Code}
+Input \code{map} is a genetic map object in the format used by package \pkg{qtl}. Input \code{pedigree} is a pedigree object and input \code{mapFunction} is a function that converts centiMorgan distances into recombination fractions. The two suggested values are \code{haldane} and \code{kosambi}. Input \code{seed} is the random seed used for random number generation in the simulation of the genetic data. 
+
+As an example of the functions provided so far, we simulate from two four-parent designs of $1000$ individuals with one generation of intercrossing and four generations of selfing. One set of simulated data uses randomly chosen funnels, while the other uses a single funnel. The same genetic map is used in both cases; there are $2$ chromosomes of length $300$ cM, each of which has 301 equally spaced markers. 
+<<tidy=TRUE, tidy.opts=list(width.cutoff=56)>>=
+#Generate map
+map <- qtl::sim.map(len = rep(300, 2), n.mar = 301, anchor.tel = TRUE, include.x = FALSE, eq.spacing = TRUE)
+#Generate random funnels pedigree
+pedigreeRF <- fourParentPedigreeRandomFunnels(initialPopulationSize = 1000, nSeeds = 1, intercrossingGenerations = 1, selfingGenerations = 4)
+#Prefix line names with RF
+pedigreeRF@lineNames <- paste0("RF", pedigreeRF@lineNames)
+#Generate single funnel pedigree
+pedigreeSF <- fourParentPedigreeSingleFunnel(initialPopulationSize = 1000, nSeeds = 1, intercrossingGenerations = 1, selfingGenerations = 4)
+#Prefix line names with SF
+pedigreeSF@lineNames <- paste0("SF", pedigreeSF@lineNames)
+crossSingleFunnel <- simulateMPCross(map = map, pedigree = pedigreeSF, mapFunction = haldane, seed = 1)
+crossRandomFunnels <- simulateMPCross(map = map, pedigree = pedigreeRF, mapFunction = haldane, seed = 1)
+@
+The simulated cross object has a single entry named \code{geneticData}, which is a list which can contain genetic data from multiple experiments. In the case of \code{crossSingleFunnel} and \code{crossRandomFunnels} this list has a single entry. These experiments can be combined using the addition operator to give a single object containing the data from both. The line names involved in both experiments must be different, which is the reason for the prefixes \code{"SF"} and \code{"RF"}. 
+<<>>=
+length(crossSingleFunnel@geneticData)
+length(crossRandomFunnels@geneticData)
+combined <- crossSingleFunnel + crossRandomFunnels
+length(combined@geneticData)
+@
+
+<<>>=
+print(cross)
+nMarkers(cross)
+nLines(cross)
+nFounders(cross)
+@
+
+The marker alleles for each founder are contained in a 
+
+Note that the output of \code{print(cross)} says that all markers are multiallelic. When simulating data using \code{simulateMPCross} all markers are fully informative (including all hets, which are simulated as being distinguishable). 
 
 \section{Estimation of recombination fractions}
 
