--- a/mpMap2.bib
+++ b/mpMap2.bib
@@ -100,3 +100,36 @@ year = {2015}
   year={2015},
   publisher={Springer}
 }
+@article {Broman2012a,
+  author = {Broman, Karl W.},
+  title = {Genotype Probabilities at Intermediate Generations in the Construction of Recombinant Inbred Lines},
+  volume = {190},
+  number = {2},
+  pages = {403--412},
+  year = {2012},
+  doi = {10.1534/genetics.111.132647},
+  publisher = {Genetics},
+  journal = {Genetics}
+}
+
+@article{Broman2012b,
+author = {Broman, Karl W.}, 
+title = {Haplotype Probabilities in Advanced Intercross Populations},
+volume = {2}, 
+number = {2}, 
+pages = {199-202}, 
+year = {2012}, 
+journal = {G3: Genes|Genomes|Genetics} 
+}
+
+@article {Broman2005,
+  author = {Broman, Karl W.},
+  title = {The Genomes of Recombinant Inbred Lines},
+  volume = {169},
+  number = {2},
+  pages = {1133--1146},
+  year = {2005},
+  doi = {10.1534/genetics.104.035212},
+  publisher = {Genetics},
+  journal = {Genetics}
+}
