--- a/mpMap2.Rnw
+++ b/mpMap2.Rnw
@@ -143,7 +143,7 @@ simulateMPCross(map, pedigree, mapFunction, seed).
 Input \code{map} is a genetic map object in the format used by package \pkg{qtl}. Input \code{pedigree} is a pedigree object and input \code{mapFunction} is a function that converts centiMorgan distances into recombination fractions. The two suggested values are \code{haldane} and \code{kosambi}. Input \code{seed} is the random seed used for random number generation in the simulation of the genetic data. The output is an S4 object of class \code{mpcross}. 
 
 As an example of the functions provided so far, we simulate from two four-parent designs of $1000$ individuals with one generation of intercrossing and four generations of selfing. One set of simulated data uses randomly chosen funnels, while the other uses a single funnel. The same genetic map is used in both cases; there are $2$ chromosomes of length $300$ cM, each of which has 301 equally spaced markers. 
-<<tidy=TRUE, tidy.opts=list(width.cutoff=56)>>=
+<<tidy=TRUE, tidy.opts=list(width.cutoff=56),cache=TRUE>>=
 #Generate map
 map <- qtl::sim.map(len = rep(300, 2), n.mar = 301, anchor.tel = TRUE, include.x = FALSE, eq.spacing = TRUE)
 #Generate random funnels pedigree
@@ -158,7 +158,7 @@ crossSingleFunnel <- simulateMPCross(map = map, pedigree = pedigreeSF, mapFuncti
 crossRandomFunnels <- simulateMPCross(map = map, pedigree = pedigreeRF, mapFunction = haldane, seed = 1)
 @
 The simulated cross object has a single entry named \code{geneticData}, which is a list of S4 objects of class \code{geneticData}. This allows \code{mpcross} objects to contain data from multiple experiments. In the case of \code{crossSingleFunnel} and \code{crossRandomFunnels} the list has a single entry. Experiments can be combined using the addition operator to give a single object containing the data from both. The line names involved in both experiments must be different, which is the reason for the prefixes \code{"SF"} and \code{"RF"}. 
-<<>>=
+<<cache=TRUE>>=
 length(crossSingleFunnel@geneticData)
 length(crossRandomFunnels@geneticData)
 combined <- crossSingleFunnel + crossRandomFunnels
@@ -167,7 +167,7 @@ length(combined@geneticData)
 
 The number of markers, founder lines and final lines can be extracted using functions \code{nMarkers}, \code{nFounders} and \code{nLines}. The number of markers is standardised once the objects are combined, so the \code{nMarkers} function outputs only a single value. Functions \code{nFounders} and \code{nLines} output a value for each contained design. 
 
-<<>>=
+<<cache=TRUE>>=
 nMarkers(crossSingleFunnel)
 nFounders(crossSingleFunnel)
 nFounders(combined)
@@ -177,23 +177,23 @@ nLines(combined)
 
 A summary of an \code{mpcross} object is generated using the print function. 
 
-<<>>=
+<<cache=TRUE>>=
 print(crossSingleFunnel)
 print(combined)
 @
 
 Note that the summaries for both objects say that all markers are multiallelic. When simulating data using \code{simulateMPCross} all markers are generated as fully informative (including all hets, which are simulated as being distinguishable). We can see this by inspecting the contained objects of class \code{geneticData}. Slot \code{founders} contains data about the founder alleles, and slot \code{hetData} determines how hetrozygotes are mapped to observed values. In the case of the data we have generated so far, each founder has a unique allele, and all hetrozygotes are distinct. 
-<<>>=
+<<cache=TRUE>>=
 crossSingleFunnel@geneticData[[1]]@founders[,1:5]
 crossSingleFunnel@geneticData[[1]]@hetData[["D1M1"]]
 @
 Observed values $1 - 4$ correspond to homozygotes for founder lines, and values $5 - 10$ correspond to different hetrozygotes. We specified $4$ generations of selfing and this is reflected in the distribution of observed values for the final population. 
-<<>>=
+<<cache=TRUE>>=
 table(crossSingleFunnel@geneticData[[1]]@finals[,1])
 @
 
 The {\color{red}most common types of markers} (I think?) currently used are \emph{Single Nucleotide Polymorphism} (SNP) markers. To convert our simulated data objects to these types of markers, we combine them with a call to \code{multiparentSNP}. 
-<<>>=
+<<cache=TRUE>>=
 snpSingleFunnel <- crossSingleFunnel + multiparentSNP(keepHets = TRUE)
 snpSingleFunnel@geneticData[[1]]@founders[,1:5]
 snpSingleFunnel@geneticData[[1]]@hetData[["D1M1"]]
@@ -209,12 +209,13 @@ For any pair genetic location there is a probability model govering the joint di
 These joint distributions are governed by the \emph{identity-by-descent} probabilities, which have been calculated for a variety of different designs \citep{Teuscher2007,Broman2005,Broman2012a,Broman2012b}. These probabilities are a function of the recombination fraction $r$ between the two markers. Several examples of relevant probability models are given in Appendix \ref{sec:ibd_models}. The relevant probabilities for more complicated designs (especially those with finite generations of selfing) are too complicated to give here, but can be calculated with the help of a computer algebra system such as Octave or Mathematica. 
 
 If two markers are fully informative, then the probability model is informative for the parameter $r$, which can be estimated using numerical maximum likelihood. However this may no longer be true when the markers are less informative. For example, assume we have a four-parent design with a single funnel and infinite generations of selfing, and markers $M_1$ and $M_2$ with the following distribution of marker alleles for the founders.
-<<echo=FALSE>>=
+<<echo=FALSE,cache=TRUE>>=
 cbind(M1 = c("Founder 1" = 1, "Founder 2" = 0, "Founder 3" = 0, "Founder 4" = 1), M2 = c("Founder 1" = 0, "Founder 2" = 1, "Founder 3" = 0, "Founder 4" = 1))
 @
 In this case every combination of marker alleles occurs with probability $\frac{1}{4}$, regardless of the parameter $r$. For this particular design, this combination of marker allele distributions is the only one that is non-informative for $r$. 
 
-The situation appears to be more complicated the larger the number of founders. For the eight-way design with a single funnel and infinite generations of selfing, the following marker allele distribution is \emph{approximately uninformative} for the parameter $r$. <<echo=FALSE>>=
+The situation appears to be more complicated the larger the number of founders. For the eight-way design with a single funnel and infinite generations of selfing, the following marker allele distribution is \emph{approximately uninformative} for the parameter $r$. 
+<<echo=FALSE,cache=TRUE>>=
 cbind(M1 = c("Founder 1" = 1, "Founder 2" = 0, "Founder 3" = 0, "Founder 4" = 1, "Founder 5" = 1, "Founder 6" = 0, "Founder 7" = 1, "Founder 8" = 1), M2 = c("Founder 1" = 0, "Founder 2" = 0, "Founder 3" = 1, "Founder 4" = 0, "Founder 5" = 0, "Founder 6" = 0, "Founder 7" = 1, "Founder 8" = 1))
 @
 In this case the likelihood is approximately (but not exactly) flat. The marker probabilities as a function of $r$ are shown in Figure \ref{fig:approximately_flat}. 
@@ -236,7 +237,11 @@ In this case the likelihood is approximately (but not exactly) flat. The marker 
 	\caption{Joint marker probabilities for an approximately uninformative pair of markers. The design used is an eight-parent cross with infinite selfing. \label{fig:approximately_flat}}
 \end{figure}
 
-Determining whether a pair of markers is informative can in theory be done by testing whether the derivative of the likelihood is always zero
+In theory we can test whether a pair of markers is non-informative by testing whether the derivative of the likelihood is identically zero. This was the approach originally used in \pkg{mpMap}, however it appears to only be practical for designs involving infinite generations of selfing, and cannot be used to identify markers that are approximately non-informative. For this reason we have chosen to use a numerical test for non-informative markers. The marker probabilities are computed for a large number of equally spaced values of $r$. Let $\lcu P_i \rcu$ be the set of such probabilities at some recombination value $r_1$ and $\lcu Q_i \rcu$ be the set of such probabilities at some recombination value $r_2$. If there are recombination values $r_1$ and $r_2$ with $\abs{r_1 - r_2} > 0.06$ so that the $L^1$ distance
+\begin{align*}
+\sum_i \abs{P_i - Q_i}
+\end{align*}
+is less than $0.003$, then the pair of markers will be declared uninformative. Although this heuristic is computationally expensive, it has the advantage of detecting both uninformative and approximately uninformative pairs of markers.  
 
 \subsection{Implementation}
 
