--- a/mpMap2.bib
+++ b/mpMap2.bib
@@ -133,3 +133,35 @@ journal = {G3: Genes|Genomes|Genetics}
   publisher = {Genetics},
   journal = {Genetics}
 }
+
+@Article{Shah2014,
+author="Shah, Rohan
+and Cavanagh, Colin R.
+and Huang, B. Emma",
+title="Computationally efficient map construction in the presence of segregation distortion",
+journal="Theoretical and Applied Genetics",
+year="2014",
+volume="127",
+number="12",
+pages="2585--2597"
+}
+
+@book{Brusco2005,
+  author = {Brusco, Michael J. and Stahl, Stephanie},
+  doi = {10.1007/0-387-28810-4},
+  url = {http://dx.doi.org/10.1007/0-387-28810-4},
+  year  = {2005},
+  publisher = {Springer-Verlag},
+  title = {Branch-and-Bound Applications in Combinatorial Data Analysis}
+}
+
+@article{Hahsler2008,
+   author = {Michael Hahsler and Kurt Hornik and Christian Buchta},
+   title = {Getting Things in Order: An Introduction to the R Package seriation},
+   journal = {Journal of Statistical Software},
+   volume = {25},
+   number = {1},
+   year = {2008},
+   pages = {1--34},
+   url = {https://www.jstatsoft.org/index.php/jss/article/view/v025i03}
+}
